vlib/v/checker/tests/fn_call_arg_multi_err.vv
fn a() (int, int) {
	return 1, 1
}

fn b(w int, arg []int) {
}

fn main() {
	rets := a()
	b(1, rets)
}
